--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - SECRET_KEY=your-secret-key-here
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - CORS_ORIGINS=["http://localhost:5173","http://localhost:3000","http://localhost","http://localhost:80"]
     ports:
       - "8000:8000"
     depends_on:
@@ -56,8 +57,6 @@ services:
         condition: service_healthy
     networks:
       - app-network
-    volumes:
-      - ./backend:/app
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -93,4 +92,3 @@ volumes:
 networks:
   app-network:
     driver: bridge
-
