--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.15",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
