--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .envrc
 .venv
 env/
@@ -143,6 +144,10 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+docker.env
+*.env.local
+*.env.production
+*.env.development
 
 # Spyder project settings
 .spyderproject
