--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ httpx = "^0.26.0"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.0"
 email-validator = "^2.2.0"
+websockets = "^12.0"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
