--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ psycopg2-binary==2.9.9
 # Data Validation
 pydantic==2.6.1
 pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
@@ -22,6 +23,8 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
 python-dotenv==1.0.0
 httpx==0.26.0
+websockets==12.0
+pydub==0.25.1
 
 # Caching
 redis==5.0.0
