--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - SECRET_KEY=your-secret-key-here
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - CORS_ORIGINS=["http://localhost:5173","http://localhost:3000","http://localhost","http://localhost:80"]
+      - CORS_ORIGINS=["http://localhost:5173","http://localhost:3000","http://localhost","http://localhost:80","http://localhost:28810"]
     ports:
       - "8000:8000"
     depends_on:
@@ -71,14 +71,14 @@ services:
       dockerfile: Dockerfile
     container_name: travel-planner-frontend
     ports:
-      - "80:80"
+      - "28810:80"
     depends_on:
       - backend
     networks:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/"]
       interval: 30s
       timeout: 10s
       retries: 3
