--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,10 +44,18 @@ services:
     environment:
       - DATABASE_URL=postgresql://admin:password@postgres:5432/travel_planner
       - REDIS_URL=redis://redis:6379
-      - SECRET_KEY=your-secret-key-here
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-here-change-in-production}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
       - CORS_ORIGINS=["http://localhost:5173","http://localhost:3000","http://localhost","http://localhost:80","http://localhost:28810"]
+      # API密钥配置（从.env文件读取）
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY:-}
+      - BAIDU_MAPS_API_KEY=${BAIDU_MAPS_API_KEY:-}
+      - BAIDU_MAP_AK=${BAIDU_MAP_AK:-}
+      - BAIDU_MAP_SK=${BAIDU_MAP_SK:-}
+      - XFYUN_APP_ID=${XFYUN_APP_ID:-}
+      - XFYUN_API_KEY=${XFYUN_API_KEY:-}
+      - XFYUN_API_SECRET=${XFYUN_API_SECRET:-}
     ports:
       - "8000:8000"
     depends_on:
@@ -69,6 +77,13 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        # 构建时传入环境变量（用于前端构建）
+        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:8000}
+        - VITE_BAIDU_MAPS_API_KEY=${VITE_BAIDU_MAPS_API_KEY:-}
+        - VITE_XUNFEI_APP_ID=${VITE_XUNFEI_APP_ID:-}
+        - VITE_XUNFEI_API_KEY=${VITE_XUNFEI_API_KEY:-}
+        - VITE_XUNFEI_API_SECRET=${VITE_XUNFEI_API_SECRET:-}
     container_name: travel-planner-frontend
     ports:
       - "28810:80"
