--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,20 @@ FROM node:20-alpine AS builder
 # 设置工作目录
 WORKDIR /app
 
+# 定义构建参数（从 docker-compose 传入）
+ARG VITE_API_BASE_URL=http://localhost:8000
+ARG VITE_BAIDU_MAPS_API_KEY
+ARG VITE_XUNFEI_APP_ID
+ARG VITE_XUNFEI_API_KEY
+ARG VITE_XUNFEI_API_SECRET
+
+# 将构建参数设置为环境变量（Vite 在构建时需要）
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ENV VITE_BAIDU_MAPS_API_KEY=$VITE_BAIDU_MAPS_API_KEY
+ENV VITE_XUNFEI_APP_ID=$VITE_XUNFEI_APP_ID
+ENV VITE_XUNFEI_API_KEY=$VITE_XUNFEI_API_KEY
+ENV VITE_XUNFEI_API_SECRET=$VITE_XUNFEI_API_SECRET
+
 # 复制package.json和package-lock.json
 COPY package*.json ./
 
